objects/LLC_BI__Collateral__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Number_of_Shares__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the number of shares being used for this type of collateral securing the loan. This field, when mapping to Laser Pro is only valid on collateral with the Securities subtype, with stock or mutual funds being used for Collateral.</description>
        <label>Number of Shares</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Units__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the number of units contained in the real estate property being used as collateral.</description>
        <label>Number of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Occupancy_Type__c</fullName>
        <description>The user populates this picklist field to indicate the occupancy use for the collateral property.</description>
        <inlineHelpText>Select the occupancy classification for the property.</inlineHelpText>
        <label>Occupancy Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Principal Dwelling</fullName>
                </value>
                <value>
                    <fullName>Secondary Residence</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Options__c</fullName>
        <description>This optional field is used to define options that apply to the asset.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Lien_Position_Value__c</fullName>
        <description>This field is optional and manually populated. This field is for the value of the other lien position.</description>
        <label>Other Lien Position Value</label>
        <summarizedField>LLC_BI__Lien__c.LLC_BI__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Position__c</field>
            <operation>equals</operation>
            <value>Other</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Lien__c.LLC_BI__Collateral__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Property_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this optional lookup field to link new Other Property Details records that capture additional property details to the Other Collateral records.</description>
        <inlineHelpText>This optional lookup field links the Other Property Details records that capture granular details that the system does not capture in Possessory, Real Estate, Titled, or UCC Collateral records to the Other Collateral records.</inlineHelpText>
        <label>Other Property Details</label>
        <referenceTo>LLC_BI__Other_Property_Details__c</referenceTo>
        <relationshipLabel>Collateral Mgmt</relationshipLabel>
        <relationshipName>Collateral_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Outstanding_Mortgage_Balance__c</fullName>
        <description>The user populates this currency field with the outstanding mortgage balance for the property. By default, it is blank.</description>
        <inlineHelpText>Enter the outstanding mortgage value for the property.</inlineHelpText>
        <label>Outstanding Mortgage Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Owner_Occupied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that the owner occupies or lives in the real estate property being used as collateral to secure a loan. Checked = true. Unchecked = false.</description>
        <label>Owner Occupied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Owners_Interest__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the percentage of ownership.</description>
        <label>Owner&apos;s Interest</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Parcel_Number__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the real estate parcel number (property identification number). This number is used for identification and record keeping for tax purposes.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Parcel Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Parent_Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup field is optional and is used to select a parent record for the Collateral Management record. Information provided on a child record rolls up to the parent collateral for valuation.</description>
        <label>Parent Collateral</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Collaterals</relationshipLabel>
        <relationshipName>Collaterals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Possessory_Account_Number__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the account number for possessory collateral. When mapped into Laser Pro, when used with a Savings/CD collateral subtype, this field serves as the collateral account number. When used with a Securities collateral subtype, this field serves as the control agreement account number.</description>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Possessory Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Possessory_Current_Balance__c</fullName>
        <description>This field is optional and manually populated. It is is used to specify the balance available when using possessory collateral. This field is not valid for mapping to Laser Pro if sent with Securities, Stock, or Mutual Fund collateral.</description>
        <label>Possessory Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Possessory_Property_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this optional lookup field to link new Possessory Property Details records that capture additional property details to the Possessory Collateral records.</description>
        <inlineHelpText>This optional lookup field links the Possessory Property Details records that capture additional property details to the Possessory Collateral records.</inlineHelpText>
        <label>Possessory Property Details</label>
        <referenceTo>LLC_BI__Possessory_Property_Details__c</referenceTo>
        <relationshipLabel>Collateral Mgmt</relationshipLabel>
        <relationshipName>Collateral_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Principal_Dwelling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that the real estate property being used to secure the loan is the primary or principal residence of the owner. Checked = true. Unchecked = false.</description>
        <label>Principal Dwelling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Property_Design_Style__c</fullName>
        <description>The user populates this picklist field to indicate the design style for the property. By default, it is blank.</description>
        <inlineHelpText>Select the property’s design style.</inlineHelpText>
        <label>Property Design Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Story</fullName>
                </value>
                <value>
                    <fullName>Bi-Level</fullName>
                </value>
                <value>
                    <fullName>Two Story</fullName>
                </value>
                <value>
                    <fullName>Split Level</fullName>
                </value>
                <value>
                    <fullName>One and a Half Story</fullName>
                </value>
                <value>
                    <fullName>Three Story</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Property_Heat_Source__c</fullName>
        <description>The user populates this picklist field to indicate the heating source for the collateral property.</description>
        <inlineHelpText>Select the heating source for the collateral property.</inlineHelpText>
        <label>Property Heat Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electric</fullName>
                </value>
                <value>
                    <fullName>Forced Air System</fullName>
                </value>
                <value>
                    <fullName>Hot Water</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Property_Latitude__c</fullName>
        <description>Users populate this optional text field with the property latitude. The default is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Optionally enter a property latitude instead of a property address for the flood determination request.</inlineHelpText>
        <label>Property Latitude</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Property_Longitude__c</fullName>
        <description>Users populate this optional text field with the property longitude. The default is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Optionally enter a property longitude instead of a property address for the flood determination request.</inlineHelpText>
        <label>Property Longitude</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Property_Original_Purchase_Date__c</fullName>
        <description>The user populates this date field with the original purchase date of the property. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the original purchase date of the property.</inlineHelpText>
        <label>Property Original Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Property_Original_Purchase_Price__c</fullName>
        <description>The user populates this currency field with the original purchase price of the property. By default, it is blank.</description>
        <inlineHelpText>Enter the original purchase price of the property.</inlineHelpText>
        <label>Property Original Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Property_Size__c</fullName>
        <description>The user populates this number field to indicate the property’s size. By default, it is blank.</description>
        <inlineHelpText>Enter the property’s size in your local unit of measurement.</inlineHelpText>
        <label>Property Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Property_Tax_Id__c</fullName>
        <description>This field is optional and manually populated. Use this field to describe the property type of a real estate property being used to secure a loan. Choose from the picklist to select Principal Dwelling, Secondary Dwelling, or Investment.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Property Tax Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Property_Type__c</fullName>
        <description>This field is used to describe the property type of a real estate property being used to secure a loan. This property type can be listed as the &quot;Principal Dwelling&quot; , &quot;Secondary Dwelling&quot; or &quot; Investment&quot;</description>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Principal Dwelling</fullName>
                </value>
                <value>
                    <fullName>Secondary Residence</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Purchase_Money__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify the collateral is under an original purchase loan, not a refinance or modification.</description>
        <label>Purchase Money</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Purchase_Price__c</fullName>
        <description>The system automatically populates this currency field to record the collateral&apos;s purchase price. By default, this field is blank.</description>
        <inlineHelpText>This field displays the collateral&apos;s purchase price.</inlineHelpText>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Purpose__c</fullName>
        <description>Users populate this optional field with the asset use or application type.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Purpose</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Real_Estate_Property_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this optional lookup field to link new Real Estate Property Details records that capture additional property details to the Real Estate Collateral records.</description>
        <inlineHelpText>This optional lookup field links the Real Estate Property Details records that capture additional property details to the Real Estate Collateral records.</inlineHelpText>
        <label>Real Estate Property Details</label>
        <referenceTo>LLC_BI__Real_Estate_Property_Details__c</referenceTo>
        <relationshipLabel>Collateral Mgmt</relationshipLabel>
        <relationshipName>Collateral_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Refinance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that the real estate property being used as collateral has been refinanced.</description>
        <label>Refinance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Remaining_Lendable_Value__c</fullName>
        <description>This field is optional and auto-populates. The field indicates the amount of lendable value available after any pledges and/or liens have been accounted for on the piece of collateral. The value of the field is calculated in this way: Lendable Value - (Total Lien Amount - Total Excluded Lien Amount) - (Total Pledge Amount - Total Excluded Pledge Amount).</description>
        <formula>(LLC_BI__Lendable_Value__c - (LLC_BI__Total_Lien_Amount__c - LLC_BI__Total_Excluded_Lien_Amount__c) - (LLC_BI__Total_Pledge_Amount__c - LLC_BI__Total_Excluded_Pledge_Amount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The amount of lendable value available after any pledges and/or liens have been accounted for on this piece of collateral.</inlineHelpText>
        <label>Available Lendable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rental_Income_Applied_Percentage__c</fullName>
        <description>The user populates this field with the percentage of the applicant’s rental income that can be applied when determining eligibility for a mortgage loan.</description>
        <inlineHelpText>Enter the percentage of the applicant’s rental income that can be applied when determining eligibility for the mortgage loan.</inlineHelpText>
        <label>Rental Income Applied Percentge</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rental_Income__c</fullName>
        <description>The user populates this currency field with the annual rental income the applicant earns from their property.</description>
        <inlineHelpText>Enter the annual income the applicant earns from their rental property.</inlineHelpText>
        <label>Rental Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Residential_Property__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that a real estate property being used to secure a loan is a residential property.</description>
        <label>Residential Property</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Residual_Value__c</fullName>
        <description>Users populate this optional field with the expected or actual value of the asset at the completion of its lease or useful life.</description>
        <label>Residual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Second_Lien_Position_Value__c</fullName>
        <description>This field is optional and manually populated. It is the value of the second lien position.</description>
        <label>Second Lien Position Value</label>
        <summarizedField>LLC_BI__Lien__c.LLC_BI__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Position__c</field>
            <operation>equals</operation>
            <value>2nd</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Lien__c.LLC_BI__Collateral__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Secured_By_Interest_In_Real_Property__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify if the collateral is secured by interest in real property.</description>
        <label>Secured By Interest In Real Property</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Secures_Future_Advances__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that the collateral is used to secure future advances. This scenario is not valid for use with Aircraft or Ship collateral.</description>
        <label>Secures Future Advances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Serial_Number__c</fullName>
        <description>Users populate this optional field with the serial number of the asset.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Soft_Cost_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Users populate this optional field with the asset amount that is categorized as soft costs.</description>
        <label>Soft Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Soft_Cost_Percentage__c</fullName>
        <description>The system automatically populates this field via a formula. It is used to calculate the percentage of soft cost to asset value.</description>
        <formula>IF( OR(ISBLANK(LLC_BI__Value__c), LLC_BI__Value__c = 0) , 0, LLC_BI__Soft_Cost_Amount__c / LLC_BI__Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of an asset&apos;s value categorized as soft costs.</inlineHelpText>
        <label>Soft Cost Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spousal_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users manually populate this optional text field. This field is used to indicate whether a spousal consent should be created for married owners of the collateral.</description>
        <label>Spousal Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__State_Registered__c</fullName>
        <description>This field is optional and manually populated. It is the state where the titled collateral is registered.</description>
        <label>State Registered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__State__c</fullName>
        <description>The state that this piece of Collateral is located at.</description>
        <inlineHelpText>The state that this piece of Collateral is located at.</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is manually selected and specifies the collateral pledged status as either Pending (incomplete or not yet available for pledging), Available, or Released (Lien has been released).</description>
        <inlineHelpText>Manually select the collateral pledged status as either Pending (incomplete or not yet available for pledging), Available, or Released (Lien has been released).</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Street_Address__c</fullName>
        <description>This field is optional and manually populated. It is the street address where the collateral is located.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The street address that this piece of Collateral is located at.</inlineHelpText>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Subdivision__c</fullName>
        <description>This field is optional and manually populated. It is is used to specify the subdivision information for real estate collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Subdivision</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tenure_Type__c</fullName>
        <description>The user populates this picklist field to indicate which legal status the applicant uses to occupy the property. By default, it is blank.</description>
        <inlineHelpText>This field indicates the applicant’s ownership status of the collateral property.</inlineHelpText>
        <label>Tenure Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Freehold</fullName>
                </value>
                <value>
                    <fullName>Leasehold</fullName>
                </value>
                <value>
                    <fullName>Strata</fullName>
                    <label>Strata (Condominium)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Lien_Position_Value__c</fullName>
        <description>This field is optional and manually populated. It is the value of the third lien position.</description>
        <label>Third Lien Position Value</label>
        <summarizedField>LLC_BI__Lien__c.LLC_BI__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Position__c</field>
            <operation>equals</operation>
            <value>3rd</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Lien__c.LLC_BI__Collateral__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party_City__c</fullName>
        <description>This field is optional and manually populated. This field is used to specify the city of a third party associated with the collateral that is being used to secure a loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Third Party City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party_Company__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the third party company associated with the collateral being used to secure a loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Third Party Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>